--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -33,8 +33,8 @@ stages:
             organization: 'amit3001muz'
             scannerMode: 'cli'
             configMode: 'manual'
-            cliProjectKey: 'sonar.projectkey'
-            cliProjectName: 'sonar.projectname'
+            cliProjectKey: 'amit'
+            cliProjectName: 'amit'
             cliSources: '.'
         - task: SonarCloudAnalyze@4
           inputs:
