--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,7 +12,7 @@ stages:
         - task: NodeTool@0
           inputs:
             versionSource: 'spec'
-            versionSpec: '17.x'
+            versionSpec: '16.x'
         - task: PowerShell@2
           inputs:
             targetType: 'inline'
@@ -49,21 +49,14 @@ stages:
         - task: NodeTool@0
           inputs:
             versionSource: 'spec'
-            versionSpec: '17.x'
+            versionSpec: '16.x'
         - task: PowerShell@2
           inputs:
             targetType: 'inline'
             script: |
+              npm install
               npm run lint
-              if ($LASTEXITCODE -ne 0) {
-                Write-Host "Lint failed, but continuing..."
-              }
-              
-              npx run stylelint
-              if ($LASTEXITCODE -ne 0) {
-                Write-Host "Stylelint failed, but continuing..."
-              }
-              
+              npx stylelint "**/*.css"
               exit 0
   - stage: buildartifacts
     displayName: buildartifacts 
@@ -74,7 +67,7 @@ stages:
         - task: NodeTool@0
           inputs:
             versionSource: 'spec'
-            versionSpec: '17.x'
+            versionSpec: '16.x'
         - task: PowerShell@2
           inputs:
             targetType: 'inline'
